2045 - add query parameters